attempt to fix travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,4 @@
-install: make get-deps
-./configure && make && make test
 language: c
-script: scons
-compiler: clang
-before_install:
-  - test -n $CC && unset CC
+script: 
+ - make clean
+ - make
